--- a/src/css/style.css
+++ b/src/css/style.css
@@ -25,6 +25,11 @@ body {
   font-size: 16px;
 }
 
+a {
+  text-decoration: none;
+  color: white;
+}
+
 .container {
   max-width: 1200px;
   margin: 0 auto;
@@ -482,12 +487,22 @@ body {
   grid-template-columns: 2fr 1fr 1fr;
   gap: 3rem;
   margin-bottom: 3rem;
+  justify-items: center;
 }
 
 .footer-brand h3 {
   font-size: 2rem;
   margin-bottom: 1rem;
   color: var(--secondary-color);
+}
+
+.footer-links {
+  display: flex;
+  flex-direction: row; 
+}
+
+.footer-col {
+  padding-right: 50%;
 }
 
 .footer-brand p {
@@ -524,6 +539,56 @@ body {
   padding-top: 2rem;
   border-top: 1px solid rgba(255, 255, 255, 0.1);
   color: #cccccc;
+}
+
+@media (max-width: 505px) {
+  body::before {
+    left: 0;
+    width: 100vw !important;
+    min-width: 100vw !important;
+    max-width: 100vw !important;
+    background-size: 30px 30px !important;
+    overflow-x: hidden !important;
+  }
+}
+
+/* Esconder em telas menores */
+@media (max-width: 768px) {
+  html, body {
+    width: 100vw !important;
+    min-width: 100vw !important;
+    max-width: 100vw !important;
+    overflow-x: hidden !important;
+    margin: 0 !important;
+    padding: 0 !important;
+  }
+  body::before {
+    left: 0 !important;
+    width: 100vw !important;
+    min-width: 100vw !important;
+    max-width: 100vw !important;
+    background-size: 30px 30px !important;
+    overflow-x: hidden !important;
+  }
+}
+
+/* Esconder em telas menores */
+@media (max-width: 510px) {
+  body {
+    width: 100vw;
+    overflow-x: hidden !important;
+    margin: 0 !important;
+    padding: 0 !important;
+  }
+}
+
+@media (max-width: 450px) {
+  body {
+    width: 100vw;
+    overflow-x: hidden !important;
+    margin: 0 !important;
+    padding: 0 !important;
+  }
 }
 
 @media (max-width: 768px) {
